update dto => change IllegalArgumentException to ValidationException, and fix some bugs in the validation logic