@@ -1,7 +1,7 @@
 package com.ensa.agile.application.user.request;
 
-import com.ensa.agile.domain.global.utils.ValidationUtil;
 import com.ensa.agile.domain.global.exception.ValidationException;
+import com.ensa.agile.domain.global.utils.ValidationUtil;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
@@ -21,27 +21,27 @@ public class RegisterRequest {
     // This constructor is for validation purposes
     public RegisterRequest(RegisterRequest req) {
         if (req == null) {
-            throw new IllegalArgumentException("Request cannot be null");
+            throw new ValidationException("Request cannot be null");
         }
 
-        if (req.firstName == null || req.firstName.trim().isEmpty() ||
+        if (req.firstName == null || req.firstName.trim().isBlank() ||
             req.firstName.length() < 3) {
             throw new ValidationException(
                 "First name must be at least 3 characters long and cannot be "
                 + "blank");
         }
-        if (req.lastName == null || req.lastName.trim().isEmpty() ||
+        if (req.lastName == null || req.lastName.trim().isBlank() ||
             req.lastName.length() < 3) {
             throw new ValidationException(
                 "Last name must be at least 3 characters long and cannot be "
                 + "blank");
         }
-        if (req.email == null || req.email.trim().isEmpty() ||
+        if (req.email == null || req.email.trim().isBlank() ||
             !ValidationUtil.isValidEmail(req.email)) {
             throw new ValidationException("Email must be valid and cannot be "
                                           + "blank");
         }
-        if (req.password != null && req.password.length() < 8) {
+        if (req.password == null || req.password.length() < 8) {
             throw new ValidationException(
                 "Password must be at least 8 characters long if provided");
         }
